# sprite-me

./: .gitignore  README.md  pyproject.toml  skills-lock.json
.github/workflows/: docker-image.yml  pages.yml
docker/comfyui/: Dockerfile  entrypoint.sh  extra_model_paths.yaml
docker/comfyui/workflows/: kontext_animate.json  pixel_art_animate.json  pixel_art_generate.json  remove_background.json
docs/: agent-skills.md  animation.md  architecture.md  index.html  lora-bootstrap.md  mcp-server.md  models.md  project-structure.md  references.md  runpod-deployment.md
docs/examples/volume-approach/: Dockerfile  README.md  deploy_runpod.sh  entrypoint.sh
scripts/: bootstrap_animatediff.py  bootstrap_loras.py  deploy_endpoint.sh  lora_comparison.sh  setup.sh  sync_models.py  test_endpoint.py  update_endpoint_image.sh  verify_kontext.py  verify_mcp.py
skills/: sprite-me-animate.md  sprite-me-essentials.md  sprite-me-generate.md
src/sprite_me/: __init__.py  animatediff_assets.py  animation_presets.py  api.py  config.py  loras.py  server.py  volumes.py
src/sprite_me/inference/: runpod_client.py  workflow_builder.py
src/sprite_me/processing/: background.py  crop.py  palette.py  spritesheet.py
src/sprite_me/storage/: local.py  manifest.py
src/sprite_me/tools/: animate.py  assets.py  generate.py  import_asset.py  status.py
tests/: test_animate.py  test_manifest.py  test_processing.py  test_runpod_client.py  test_workflow_builder.py
